--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="navbar navbar-default">
+    <div class="container">
+      <!-- main-panel -->
+      <div id="main-panel">
+        <aside>
+          <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ACalendar</a>
+          <a class="navbar-brand" href="#" style="margin-left: 0">ACalendar</a>
         </div>
         <div class="navbar-collapse collapse">
           <!-- <ul class="nav navbar-nav">
@@ -66,10 +70,6 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-    <div class="container">
-      <!-- main-panel -->
-      <div id="main-panel">
-        <aside>
           <div id="mini-calendar"></div>
         </aside>
         <section>
