--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/daterangepicker.css">
@@ -305,6 +307,12 @@
               <th>Date: </th>
               <td><%= event.date %></td>
             </tr>
+            <% if (typeof event.summaryToString != "undefined") { %>
+            <tr>
+              <th>Repeat:</th>
+              <td><%= event.summaryToString %></td>
+            </tr>
+            <% } %>
             <% if (typeof event.location != "undefined" && event.location !== null) { %>
             <tr>
               <th>Location:</th>
